--- a/index.html
+++ b/index.html
@@ -38,14 +38,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
-    <!-- Bootstrap icon from a CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-      integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e"
-      crossorigin="anonymous"
-    />
-
     <!-- Bootstrap CSS -->
     <!-- <link
       rel="stylesheet"
@@ -64,13 +56,17 @@
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
 
     <!-- Load JS files -->
-    <script src="/assets/js/util.js"></script>
+    <script type="text/javascript" src="/assets/js/util.js"></script>
 
-    <script src="/assets/js/topics.js"></script>
-    <script src="/assets/js/insights.js"></script>
-    <script src="/assets/js/awards.js"></script>
-    <script src="/assets/js/saved.js"></script>
-    <script defer src="/assets/js/components.js"></script>
+    <script type="text/javascript" src="/assets/js/topics.js"></script>
+    <script type="text/javascript" src="/assets/js/insights.js"></script>
+    <script type="text/javascript" src="/assets/js/awards.js"></script>
+    <script type="text/javascript" src="/assets/js/saved.js"></script>
+    <script
+      defer
+      type="text/javascript"
+      src="/assets/js/components.js"
+    ></script>
   </head>
 
   <body>
@@ -228,7 +224,11 @@
             <div class="editorsPick__main col gap--m">
               <div class="editorsPick__img section__img">
                 <template id="editorsPickImgTemplate">
-                  <img src="{{thumbnail}}" class="img--ratio-169" />
+                  <img
+                    src="{{thumbnail}}"
+                    class="img--ratio-169"
+                    crossorigin="anonymous"
+                  />
                 </template>
                 <div class="component-bookmark-add"></div>
               </div>
@@ -674,7 +674,7 @@
               <p class="section__title">ad</p>
             </div>
             <a href="#" class="section__img">
-              <img src="./data/insights/thumbnail/test.jpg" />
+              <img src="./data/insights/thumbnail/test.webp" />
             </a>
           </div>
         </div>
@@ -688,7 +688,7 @@
         <div class="section__content col gap--l">
           <div
             class="video__bg bg--img col"
-            style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+            style="--img-url: url(../../data/insights/thumbnail/test.webp)"
           >
             <div class="video__content col gap--m tc--white">
               <div class="topic__wrapper">
@@ -722,7 +722,7 @@
               </div>
               <div
                 class="video__thumbnail bg--img"
-                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+                style="--img-url: url(../../data/insights/thumbnail/test.webp)"
               >
                 <div class="video__float-wrapper video__play-outline ts--h4">
                   <i class="video__play-icon fa-solid fa-play"></i>
@@ -740,7 +740,7 @@
               </div>
               <div
                 class="video__thumbnail bg--img"
-                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+                style="--img-url: url(../../data/insights/thumbnail/test.webp)"
               >
                 <div class="video__float-wrapper video__play-outline ts--h4">
                   <i class="video__play-icon fa-solid fa-play"></i>
@@ -758,7 +758,7 @@
               </div>
               <div
                 class="video__thumbnail bg--img"
-                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+                style="--img-url: url(../../data/insights/thumbnail/test.webp)"
               >
                 <div class="video__float-wrapper video__play-outline ts--h4">
                   <i class="video__play-icon fa-solid fa-play"></i>
@@ -776,7 +776,7 @@
               </div>
               <div
                 class="video__thumbnail bg--img"
-                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
+                style="--img-url: url(../../data/insights/thumbnail/test.webp)"
               >
                 <div class="video__float-wrapper video__play-outline ts--h4">
                   <i class="video__play-icon fa-solid fa-play"></i>
