latest avatar data binding

--- a/index.html
+++ b/index.html
@@ -586,9 +586,7 @@
                     </p>
                   </div>
                   <div class="author-row--icon v-center row gap--s">
-                    <p class="icon__avatar-wrapper">
-                      <i class="icon__avatar fa-regular fa-circle-user"></i>
-                    </p>
+                    <img src="{{author.avatar}}" class="author__avatar" />
                     <p class="author__name">{{author.name}}</p>
                   </div>
                 </div>
