--- a/index.html
+++ b/index.html
@@ -511,10 +511,10 @@
                       class="savedForLater__title serif ts--h3 hover--txt"
                       >{{title}}</a
                     >
-                    <div class="savedForLater__author avatar row gap--s">
-                      <i
-                        class="author__icon ts--body fa-regular fa-circle-user"
-                      ></i>
+                    <div
+                      class="savedForLater__author avatar row v-center gap--s"
+                    >
+                      <img src="{{author.avatar}}" class="author__avatar" />
                       <p class="author__name">{{author.name}}</p>
                     </div>
                   </div>
@@ -532,14 +532,17 @@
         <div id="inspirations" class="aside__box col gap--m container--s">
           <div class="section__title-wrapper row between">
             <p class="section__title">inspirations</p>
-            <div class="icon__wrapper ts--body">
+            <button
+              id="shuffleImage"
+              class="icon__wrapper ts--body hover--primary"
+            >
               <i class="fa-solid fa-shuffle"></i>
-            </div>
+            </button>
           </div>
           <ul class="inspirations__list">
             <template id="inspirationsTemplate">
               {{#each data}}
-              <li class="inspirations__img section__img">
+              <li class="inspirations__item section__img">
                 <img class="inspirations__img" src="{{thumbnail}}" />
                 <label
                   class="inspirations__topic topic topic--white ts--btn tc--white"
