--- a/index.html
+++ b/index.html
@@ -73,9 +73,39 @@
   </head>
 
   <body>
+    <!-- Modal -->
+    <div
+      class="modal__overlay"
+      style="
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.333);
+        position: fixed;
+        left: 0px;
+        top: 0px;
+        z-index: 99;
+        display: none;
+      "
+    >
+      <video
+        class="modal__video"
+        controls
+        style="
+          border-radius: 1.6rem;
+          max-width: 80vw;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 999;
+          display: none;
+        "
+      ></video>
+    </div>
+
     <!-- Template html texts (Component) -->
     <template id="viewAllTemplate">
-      <a href="#" class="viewAll row gap--s">
+      <a href="#" class="viewAll row gap--s hover--lighter">
         <p class="viewAll__txt ts--btn">view all</p>
         <i class="fa-solid fa-chevron-right ts--body-s"></i>
       </a>
@@ -240,7 +270,7 @@
               </div>
               <div class="editorsPick__title">
                 <template id="editorsPickTitleTemplate">
-                  <a class="serif hover--txt ts--h3" href="#">{{title}}</a>
+                  <h3 class="serif hover--txt">{{title}}</h3>
                 </template>
               </div>
             </div>
@@ -249,10 +279,9 @@
               <ul class="editorsPick__list col gap--m">
                 <template id="editorsPickListTemplate">
                   {{#each insights}}
-                  <li class="editorsPick__list-item ts--h4 serif">
-                    <a href="#" class="editorsPick__list-txt hover--txt"
-                      >{{title}}</a
-                    >
+                  <li class="editorsPick__item serif row gap--s">
+                    <p class="editorsPick__marker">✦</p>
+                    <h4 class="editorsPick__item-txt hover--txt">{{title}}</h4>
                   </li>
                   {{/each}}
                 </template>
@@ -506,11 +535,9 @@
                     <label class="topic--white ts--btn">{{topic}}</label>
                   </div>
                   <div class="savedForLater__txt col gap--m">
-                    <a
-                      href="#"
-                      class="savedForLater__title serif ts--h3 hover--txt"
-                      >{{title}}</a
-                    >
+                    <h3 class="savedForLater__title serif hover--txt">
+                      {{title}}
+                    </h3>
                     <div
                       class="savedForLater__author avatar row v-center gap--s"
                     >
@@ -534,7 +561,7 @@
             <p class="section__title">inspirations</p>
             <button
               id="shuffleImage"
-              class="icon__wrapper ts--body hover--primary"
+              class="icon__wrapper ts--body hover--lighter"
             >
               <i class="fa-solid fa-shuffle"></i>
             </button>
@@ -646,6 +673,7 @@
             <div
               class="video__bg bg--img col"
               style="--img-url: url({{thumbnail}})"
+              data-id="{{id}}"
             >
               <div class="video__content col gap--m tc--white">
                 <div class="topic__wrapper">
@@ -653,20 +681,16 @@
                 </div>
                 <h2 class="video__headline serif">{{title}}</h2>
                 <p class="video__summary">{{summary}}</p>
-                <a href="#" class="video__play">
-                  <div
-                    class="video__play-icon-wrapper video__play-outline ts--h4"
-                  >
-                    <i class="video__play-icon fa-solid fa-play"></i>
-                  </div>
-                </a>
+                <button class="btn-video ts--h4">
+                  <i class="video__play-icon fa-solid fa-play"></i>
+                </button>
               </div>
             </div>
           </template>
           <ul class="video__list row gap--m">
             <template id="videoListTemplate">
               {{#each data}}
-              <li class="video__item row gap--s">
+              <li class="video__item row gap--s" data-id="{{id}}">
                 <div class="video__txt-wrapper col gap--s">
                   <div class="topic__wrapper">
                     <label class="topic">{{topic}}</label>
@@ -679,9 +703,9 @@
                     --img-url: url({{thumbnail}})
                   "
                 >
-                  <div class="video__float-wrapper video__play-outline ts--h4">
+                  <button class="video__float-wrapper btn-video ts--h4">
                     <i class="video__play-icon fa-solid fa-play"></i>
-                  </div>
+                  </button>
                 </div>
               </li>
               {{/each}}
