--- a/index.html
+++ b/index.html
@@ -74,33 +74,8 @@
 
   <body>
     <!-- Modal -->
-    <div
-      class="modal__overlay"
-      style="
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.333);
-        position: fixed;
-        left: 0px;
-        top: 0px;
-        z-index: 99;
-        display: none;
-      "
-    >
-      <video
-        class="modal__video"
-        controls
-        style="
-          border-radius: 1.6rem;
-          max-width: 80vw;
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          z-index: 999;
-          display: none;
-        "
-      ></video>
+    <div class="modal__overlay">
+      <video class="modal__video" controls></video>
     </div>
 
     <!-- Template html texts (Component) -->
