router loading issue resolved

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
 
     <!-- Load JS files -->
-    <script type="text/javascript" src="/assets/js/route.js"></script>
+    <script
+      id="router"
+      type="text/javascript"
+      src="/assets/js/router.js"
+    ></script>
   </head>
 
   <body>
@@ -155,8 +159,6 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
         </div>
       </nav>
     </header>
-
-    <object data="main.html" id="external__main" style="height: 0"></object>
 
     <main id="main"></main>
 
