generate insight html

--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
 
     <!-- Load JS files -->
-    <script
-      id="router"
-      type="text/javascript"
-      src="/assets/js/router.js"
-    ></script>
+    <script type="text/javascript" src="/assets/js/router.js"></script>
   </head>
 
   <body>
@@ -144,7 +140,7 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
       <nav class="navbar__wrapper">
         <img class="navbar__logo logo--white" src="/assets/image/logo.png" />
         <div class="navbar__menu row gap--l tc--white">
-          <a class="menu__item" href="#">Insights</a>
+          <a class="menu__item" href="/insight">Insights</a>
           <a class="menu__item" href="#">Quiz</a>
           <a class="menu__item" href="#">Authors</a>
           <a class="menu__item" href="#">Report</a>
