--- a/index.html
+++ b/index.html
@@ -53,10 +53,15 @@
     <link rel="stylesheet" href="/assets/css/responsive.css" />
 
     <!-- Handlebars from a CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
+    <script
+      defer
+      type="text/javascript"
+      src="/assets/plugins/handlebars/handlebars.min.js"
+    ></script>
 
     <!-- Load JS files -->
-    <script type="text/javascript" src="/assets/js/router.js"></script>
+    <script defer type="text/javascript" src="/assets/js/util.js"></script>
+    <script defer type="text/javascript" src="/assets/js/router.js"></script>
   </head>
 
   <body>
