--- a/main.html
+++ b/main.html
@@ -464,7 +464,8 @@
             <p class="section__title">ad</p>
           </div>
           <a href="#" class="section__img">
-            <img src="./data/insights/thumbnail/test.webp" />
+            <!-- <img src="/data/insights/thumbnail/test.webp" /> -->
+            <p>ad 자리</p>
           </a>
         </div>
       </div>
