--- a/insight.html
+++ b/insight.html
@@ -6,6 +6,8 @@
     <title>insight</title>
   </head>
   <body>
-    <p>some insight</p>
+    <section>
+      <img src="/assets//image/logo.png" />
+    </section>
   </body>
 </html>
