separate insights related files - cover, editorspick, topics

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     ></script>
 
     <!-- Load JS files -->
+    <script defer type="text/javascript" src="/assets/js/api.js"></script>
     <script defer type="text/javascript" src="/assets/js/util.js"></script>
     <script defer type="text/javascript" src="/assets/js/router.js"></script>
   </head>
