separate insights related files - trendings

--- a/main.html
+++ b/main.html
@@ -204,9 +204,10 @@
               <p class="separator">·</p>
               <p class="ttr__box">
                 <span class="ttr">
-                  <template id="trendingMainTtrTemplate"> {{ttr}} </template>
+                  <template id="trendingMainTtrTemplate">
+                    {{ttr}} read</template
+                  >
                 </span>
-                read
               </p>
             </div>
             <div class="author-row--icon v-center row gap--s">
