the latest binding

--- a/main.html
+++ b/main.html
@@ -199,7 +199,7 @@
                 <i class="icon__time fa-regular fa-clock"></i>
               </h4>
               <p class="createdAt">
-                <!-- [main createdAt] -->
+                <template id="trendingMainCreatedAt">{{createdAt}}</template>
               </p>
               <p class="separator">·</p>
               <p class="ttr__box">
@@ -466,7 +466,7 @@
           </div>
           <a href="#" class="section__img">
             <!-- <img src="/data/insights/thumbnail/test.webp" /> -->
-            <p>ad 자리</p>
+            <p>advertisement img here</p>
           </a>
         </div>
       </div>
