loading unloading scripts - refactored

--- a/insights.html
+++ b/insights.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section>
-      <img src="/assets//image/logo.png" />
+      <p>insight list page</p>
     </section>
   </body>
 </html>
