--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
         <div class="navbar__menu row gap--l tc--white">
           <a
             class="menu__item"
-            href="/insight"
-            onclick="handleRouteChange('/insight'); return false;"
+            href="/insights"
+            onclick="handleRouteChange('/insights'); return false;"
             >Insights</a
           >
           <a class="menu__item" href="#">Quiz</a>
