history api processed

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
           <img class="navbar__logo logo--white" src="/assets/image/logo.png" />
         </a>
         <div class="navbar__menu row gap--l tc--white">
-          <a
-            class="menu__item"
-            href="/insights/1"
-            onclick="handleRouteChange('/insights/1'); return false;"
-            >Insights</a
+          <button
+            class="menu__item ts--body"
+            onclick="navigateTo('/insights/1'); return false;"
           >
+            Insights
+          </button>
           <a class="menu__item" href="#">Quiz</a>
           <a class="menu__item" href="#">Authors</a>
           <a class="menu__item" href="#">Report</a>
