--- a/insight.html
+++ b/insight.html
@@ -6,8 +6,12 @@
     <title>insight</title>
   </head>
   <body>
-    <section>
-      <p>insight detail page</p>
+    <section id="detail">
+      <div>topic</div>
+      <h1>title</h1>
+      <p>summary</p>
+      <p>By Grace Bennett</p>
+      <div></div>
     </section>
   </body>
 </html>
